# Code-Snippets

./: README.md
C++/compilers/dragon-book/: readme.md
C++/compilers/dragon-book/chap1/: token.hpp
C++/compilers/dragon-book/chap2/: grammars.txt  symbol_table.hpp
C++/compilers/dragon-book/chap2/postfix/: CMakeLists.txt
C++/compilers/dragon-book/chap2/postfix/notes/: grammar.txt  todo.txt  transformed.txt
C++/compilers/dragon-book/chap2/postfix/src/: lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  symbol_table.hpp  tokens.hpp  util.hpp
C++/compilers/dragon-book/chap2/postfix/src/syntax_tree_nodes/: concepts.hpp  ident_node.hpp  num_node.hpp  start_node.hpp
C++/compilers/dragon-book/chap2/postfix/src/syntax_tree_nodes_static/: expr_node.hpp  ident_node.hpp  num_node.hpp  op_node.hpp  start_node.hpp
C++/compilers/dragon-book/chap2/postfix/src/syntax_tree_nodes_template/: expr_node.hpp  op_node.hpp
C++/compilers/dragon-book/chap2/postfix/tests/: nodes.cpp
C++/nullptrs/: main.cpp
C++/python_simulator/: main.cpp  readme.md  ref.hpp
C++/type_erasure/: main  main.cpp
